# tensorRT_practice

./: README.md
UNet/: notebook.ipynb  onnx2engine_fp16.sh
UNet/py_runtime/: notebook.ipynb
runtime/: make_onnx.py  onnx2engine_int8.sh
runtime/cpp_runtime/: CMakeLists.txt  main.cpp  util.cpp  util.h
runtime/cpp_runtime/end2end/: CMakeLists.txt  main.cpp  util.cpp  util.h
runtime/data/: image2.ppm  image4.ppm  output.tif
runtime/py_runtime/: notebook.ipynb
